# cargo-local-install

./: Cargo.toml
src/: lib.rs  manifest.rs
