# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "cargo-local-install"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
repository      = "https://github.com/MaulingMonkey/cargo-local-install.git"
documentation   = "https://docs.rs/cargo-local-install/"
edition         = "2018"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "Wraps `cargo install` for better local, non-conflicting installation"
keywords        = ["cargo", "install"]
categories      = ["development-tools::cargo-plugins"]
exclude         = [".cargo", ".vscode", "scripts", "target", "test"]

[features]
default         = ["manifest"]
manifest        = ["serde", "toml", "cargo_toml"]

[dependencies]
serde           = { version = "1",   optional = true, features = ["derive"]}
toml            = { version = "0.8.17", optional = true, default-features = false, features = ["parse"] }
cargo_toml =      {version = "0.20.4", optional = true}
